# backend

./: .gitignore  README.md  experimantaions.ipynb  instruction.md  langgraph.json  pyproject.toml  requirements.txt
.streamlit/: config.toml
App/: __init__.py  session_manager.py  streamlit_app.py  styles.py
Core/: __init__.py  config.json
Core/LLMS/: __init__.py  factory.py
Core/Results/: pr_id_0.json
Core/Workflows/: __init__.py
Core/Workflows/MainGraph/: __init__.py
Core/Workflows/MainGraph/Agent/: __init__.py
Core/Workflows/MainGraph/Agent/DataframeAgent/: agent.py  prompt.py
Core/Workflows/MainGraph/Agent/ReporterAgent/: agent.py  prompt.py
Core/Workflows/MainGraph/Agent/SupervisorAgent/: agent.py  prompt.py
Core/Workflows/MainGraph/Graph/: __init__.py  builder.py  nodes.py  routers.py  states.py  tools.py
Core/Workflows/PlotGraph/: __init__.py
Core/Workflows/PlotGraph/Agent/: __init__.py
Core/Workflows/PlotGraph/Agent/AnalysisAgent/: agent.py  prompt.py  schema.py
Core/Workflows/PlotGraph/Agent/CodeAgent/: agent.py  prompt.py
Core/Workflows/PlotGraph/Agent/PromptAgent/: agent.py  prompt.py
Core/Workflows/PlotGraph/Graph/: builder.py  nodes.py  states.py  tools.py  types.py
Core/Workflows/SandBoxGraph/: __init__.py
Core/Workflows/SandBoxGraph/Graph/: graph.py
Core/Workflows/TagGraph/: __init__.py
Core/Workflows/TagGraph/Agent/: __init__.py
Core/Workflows/TagGraph/Agent/BatchAgent/: agent.py  prompt.py  schemas.py
Core/Workflows/TagGraph/Graph/: builder.py  datasets.py  nodes.py  reducers.py  routers.py  states.py  types.py
(+3 files in other folders)
